test/arrays/deitz/test_bounds2.chpl
var A : [1..5, 1..5] integer;

writeln(A(1, 5));
writeln(A(1, 6));
